# proto_typr

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: jekyll-gh-pages.yml  pdoc-pub.yml  test-poet.yml
dev_docs/: index.html  proto_typr.html  search.js  tests.html
dev_docs/proto_typr/: am_camilla.html  commands.html  main.html  old_scratch_pad.html  other_file.html
dev_docs/proto_typr/am_camilla/: am_camilla.html
dev_docs/tests/: test_commands.html  test_main.html  test_old_scratch_pad.html
docs/: index.html  proto_typr.html  search.js  tests.html
docs/proto_typr/: main.html
docs/tests/: test_main.html
inclusion_dir/: some_rows.csv
src/proto_typr/: __init__.py  __main__.py  commands.py  main.py  old_scratch_pad.py  other_file.py
src/proto_typr/am_camilla/: am_camilla.py
tests/: test_commands.py  test_main.py  test_old_scratch_pad.py
